# News-Fixed

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FTN-315.html  IMPLEMENTATION_REPORT.txt  LICENSE  News Fixed Initial Prompt.md  PHASE_3_VERIFICATION.md  README.md  REUSE.toml  TASK_5_FINAL_VERIFICATION.txt  TESTING.md  crontab  fly.toml  ftn-315-day1.json  ftn-315-day2.json  ftn-315-day3.json  main.py  news-fixed  pyproject.toml  requirements.txt  start.sh
.beads/: beads.left.meta.json  issues.jsonl  last-touched
.chainlink/: issues.db
.github/: SONARQUBE_SETUP.md
.github/workflows/: sonarqube.yml
cache/2026-W99/: metadata.json
code/: .env.example  curate.py  login_to_ftn.py  main.py
code/prompts/: local_story.txt  mini_article.txt  second_main_story.txt  statistics.txt  teaser.txt  xkcd_analysis.txt
code/src/: __init__.py  cache.py  content_generation.py  curate.py  curator.py  curator_data.py  fetch_ftn_browser.py  fetch_ftn_clean.py  fetcher.py  ftn_to_json.py  generator.py  main.py  parser.py  pdf_generator.py  pdf_generator_typst.py  readwise_fetcher.py  scheduled_generate.py  sports_schedule.py  test_cache.py  test_parser.py  (+10 more)
config/: blocklist.txt
data/: sf_articles_used.json
docs/: CURATION.md  FETCHING.md  INDEX.md  README.md  architecture-for-kids.md
prompts/: headline.txt  main_story.txt  mini_article.txt  statistics.txt  teaser.txt
src/: fetch_ftn_clean.py  fetch_ftn_simple.py  ftn_to_json.py  generator.py  parser.py  pdf_generator.py  sports_schedule.py  utils.py
templates/: newspaper.html  styles.css
(+30 files in other folders)
